--- a/index.html
+++ b/index.html
@@ -25,5 +25,18 @@
     <p id="totalPrice"></p>
     </div>
   </section>
+  <script src="https://www.gstatic.com/firebasejs/5.8.3/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyCquajUeRSID2ZDwor_D8fPp7hi-aiaRYs",
+    authDomain: "gun-shop-41c15.firebaseapp.com",
+    databaseURL: "https://gun-shop-41c15.firebaseio.com",
+    projectId: "gun-shop-41c15",
+    storageBucket: "gun-shop-41c15.appspot.com",
+    messagingSenderId: "1084337412482"
+  };
+  firebase.initializeApp(config);
+</script>
   <script src="script.js"></script>
 </body>
