--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>PCF</title>
   <meta name="author" content="Marcin Górecki"/>  
-  <script src="https://www.gstatic.com/firebasejs/5.8.3/firebase.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.8.3/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase-messaging.js"></script>
   <script>
   // Initialize Firebase
   var config = {
